# fastio-cli

./: .coveragerc  .flake8  .gitignore  README.md  README.rst  pyproject.toml  pytest.ini
.github/workflows/: ci-test.yml  codecov.yml  python-publish.yml  test-python-app.yml
demo/: academic.openapi3.json
examples/: academic.openapi3.json
fastio_cli/: cli.py  github.py  initialize.py  initializer.py  utils.py
fastio_cli/data/: starter.openapi3.json
fastio_cli/openapi/: __init__.py  models.py  openapi.py
fastio_cli/templates/: __init__.py  base_tmpl.py
fastio_cli/templates/fullstack_template/: main.py
fastio_cli/templates/fullstack_template/api/: api.jinja2  api_tmpl.py
fastio_cli/templates/fullstack_template/application/: application_tmpl.py
fastio_cli/templates/fullstack_template/migration/: migration.jinja2  migration_tmpl.py
fastio_cli/templates/fullstack_template/model/: model.jinja2  model_tmpl.py
fastio_cli/templates/fullstack_template/repository/: respository_model.jinja2  respository_model_tmpl.py
fastio_cli/templates/fullstack_template/request_model/: request_model.jinja2  request_model_tmpl.py
fastio_cli/templates/fullstack_template/response_model/: response_model.jinja2  response_model_tmpl.py
fastio_cli/templates/fullstack_template/router/: router.jinja2  router_tmpl.py
fastio_cli/templates/fullstack_template/seeder/: database_seeder.jinja2  database_seeder_tmpl.py  seeder.jinja2  (+1 more)
scripts/: lint.sh  test.sh
tests/: base.py  test_commands.py  test_fastio_cli.py  test_version.py
tests/unit/: test_github.py  test_initializer.py
(+17 files in other folders)
